# micepp-tracker

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260713_0001_foundation.py  20260713_0002_auth_rbac.py  20260713_0003_platforms.py  20260713_0004_services_categories.py  20260713_0005_notifications_audit.py  20260713_0006_excel_imports.py  20260713_0007_scans.py  20260713_0008_nvd_vulnerabilities.py  20260713_0009_realtime_protection.py  20260714_0010_global_categories.py  20260715_0011_service_notifications.py  20260720_0012_cpe_control.py  20260720_0013_vulnerability_treatments.py  20260721_0014_archived_usernames.py  20260721_0015_cancel_treatments.py  20260721_0016_service_treatments.py
backend/app/: __init__.py  main.py  worker.py
backend/app/cli/: bootstrap_admin.py
backend/app/core/: config.py  errors.py  logging.py  middleware.py  permissions.py  security.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  auth.py  notification.py  platform.py  realtime.py  scan.py  service.py  treatment.py  vulnerability.py
backend/tests/: conftest.py  test_auth.py  test_categorization.py  test_config.py  test_detectors.py  test_excel_imports.py  test_health.py  test_inventory.py  test_notifications_history.py  test_platforms.py  test_realtime.py  test_scans.py  test_security_hardening.py  test_treatments.py  test_users.py  test_vulnerabilities.py
docs/: architecture.md
(+132 files in other folders)
