[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "micepp-tracker-backend"
version = "0.1.0"
description = "API backend for MICEPP-Tracker"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14,<2",
  "argon2-cffi>=23.1,<26",
  "asyncpg>=0.30,<1",
  "celery[redis]>=5.4,<6",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "openpyxl>=3.1,<4",
  "packaging>=24,<26",
  "python-multipart>=0.0.20,<1",
  "PyJWT[crypto]>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "redis>=5.2,<7",
  "sqlalchemy[asyncio]>=2.0.36,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.20,<1",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "ruff>=0.9,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
